--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/GhostDovahkiin/Node-API-BaltaIO#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "node-sass": "^4.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
