--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "mongoose": "^5.9.15",
     "node-sass": "^4.14.1"
   },
   "devDependencies": {
