--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "guid": "0.0.12",
     "http": "0.0.1-security",
     "mongoose": "^5.9.15",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "node-uuid": "^1.4.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
