--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/GhostDovahkiin/Node-API-BaltaIO#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
