--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sendgrid/mail": "^7.1.1",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "guid": "0.0.12",
     "http": "0.0.1-security",
