--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/GhostDovahkiin/Node-API-BaltaIO#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.1.1",
+    "azure-storage": "^2.10.3",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
